client/css/style.css
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.app p {
  color: blue;
}

html,body{
  width: 100%;
  height: 100%;
  font: normal 12px/18px 'Helvetica Neue', Helvetica, Arial, sans-serif;
  background-color: #f2f2f2;
  color: #414141;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}

h1,h2,h3,h4,h5,h6,p{
  margin: 0;
  padding: 0;
}

.noleft{
  padding-left: 0;
}

.noright{
  padding-right: 0;
}

.nopadding{
  padding: 0;
}

a{
  outline: medium none !important;
text-decoration:none;
}

a:hover{
text-decoration:none;
}

a:focus{
  text-decoration: none;
}

button:focus{
  outline:0px;
}

.width1{
width:100%;
}

.container{
  width: 100%;
  display: block;
  float: left;
}

.boxs{
width: 100%;
display: block;
float: left;
}

.btn:hover{
background-color: #ff9900;
border-color: #ff9900;
color: #fff;
}

.btn-default:hover{
background-color: #ff9900;
border-color: #f5f5f5;
color: #f5f5f5;
}

.btn-default:active{
color: none;
  background-color: none;
  border-color: none;
}


.btn1:hover{
  background-color: transparent;
  color: #f5f5f5;
  border-color: #f5f5f5;
}

.review_box_main_inner{
  padding: 40px 0px;
}
.review_box_main_inner1_left,.review_box_main_inner1_right{
  float: left;
  display: inline;
}
.review_box_main_inner1{
  position: relative;
  padding-left: 80px;
  margin: 10px 0px;
}
.review_box_main_inner1_left{
  position: absolute;
  left: 0;
  background-color: #f2f2f2;
  border: 1px solid #ccc;
  padding: 5px;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
  margin-right: 20px;
  height: 62px;
  width: 62px;
}
.position_img_badge{
  /* background: url(../img/badge_pro.png) no-repeat -1px -2px; */
  height: 32px;
  width: 32px;
  position: absolute;
  top: 0;
  left: 0;
  background-size: 31px 32px;
}
.img_boxreview{

}
.img_boxreview img{
  width: 100%;
  border-radius: 6px;
}
.review_box_main_inner1_right{
      background-color: #f2f2f2;
  border: 1px solid #ccc;
  padding: 10px 10px 10px 10px;
 /* width: auto;*/
  overflow: hidden;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}
.review_box_main_inner1 h4{
  font-size: 12px;
  font-weight: bold;
  color: #414141;
  float: left;
 /* white-space: nowrap;*/
  width: 75%;
  line-height: 16px;
}
.review_box_main_inner1 h4 a{
 color: #219ad8;
 /*display: inline-block;*/
}
.review_box_main_inner1 h4 a:hover{
  opacity: 0.6;
}
.review_rating{
  padding-top: 5px;
}
.review_rating_days{
  padding-bottom: 10px;
}
.review_rating span{
  float: right;
}
.review_rating span .fa-star{
  color: #f8cb1b;
  font-size: 16px;
}
.review_rating span .fa_whiteclr{
  color: #dfdad7;
}
.review_rating_days p,.review_from_user p{
  text-align: right;
  font-size: 14px;
  color: #414141;
  padding-top: 5px;
}
.review_from_user{
  border-top:1px solid #ccc ;
  padding: 10px 0px;
}
.review_from_user p{
  text-align: left;
}
.hiking_anchorbox span{
  color: #fff;
  float: left;
  background: #757575;
  padding: 4px 15px;
  border-radius: 6px;
  font-size: 12px;
}

.sort_list{
  float: center;
  color: #4bafe1;
  font-size: 9pt;
  /* margin-left: 20px; */
}
a { color: #4bafe1;}

/* .final{
  margin-top: 20px;
  text-align: center
} */

.container1 {
  /* border-style: solid;
  border-color: blue; */

  flex-direction: column;
  align-items: center;
  font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;
  color: #414141;
}

h2 {
  font-size: 17px;
  font-weight: normal;
  text-align: center;
}

/* button{
  background:  #4bafe1;
  width: 101px;
  height: 30px;

  border-radius: 5px;
  font-size: 12px;
  color: white;
  font-weight: bold;
  outline: 0;
  display:inline;
  margin: 10px -50px;
    position:relative;
    top:50%;
    left:50%;
} */

.container{
  width: 100%;
  float: left;
  text-align: center;
}
.container button{
  display: inline-block;
  background:  #4bafe1;
  width: 101px;
  height: 30px;

  border-radius: 5px;
  font-size: 12px;
  color: white;
  font-weight: bold;
  margin: 15px
}
.btn1{
  /* float:left; */

}
.btn3{
  /* float:right; */
  margin-right: 300px;
}

